# narrow

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix  release-plz.toml  rustfmt.toml  search-index.js  settings.html  settings.js  source-files.js
.cargo/: config.toml
.github/: bors.toml  dependabot.yml
.github/workflows/: bench.yml  docs.yml  release.yml  test.yml
benches/narrow/: bitmap.rs  main.rs
benches/narrow/array/: mod.rs
benches/narrow/bitmap/: iter.rs
benches/narrow/compute/: mod.rs  take.rs
benches/narrow/validity/: iter.rs  mod.rs
benches/narrow/versus/arrow/: primitive.rs
dev/bench/: data.js
examples/: basic.rs  parquet.rs  tpch_lineitem.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/ops/index/: trait.Index.js
implementors/narrow/buffer/: trait.BufferMut.js
narrow/: all.html  index.html  sidebar-items.js  trait.DataBuffer.html  trait.DataBufferMut.html  trait.Length.html  trait.Null.html  trait.OffsetBuffer.html  trait.Primitive.html  trait.ValidityBitmap.html
narrow-derive/: CHANGELOG.md  Cargo.toml  README.md
narrow-derive/src/: enum.rs  lib.rs  struct.rs  util.rs
narrow-derive/src/enum/: mod.rs
narrow-derive/src/struct/: mod.rs  named.rs  unit.rs  unnamed.rs
narrow-derive/src/union/: mod.rs
narrow-derive/src/util/: add_type_param.rs  drop_outer_option.rs  mod.rs  self_replace.rs  type_param_bound.rs
narrow-derive/tests/: expand.rs
narrow-derive/tests/expand/enum/named/: generic.expanded.rs  generic.rs  simple.expanded.rs  simple.rs
narrow-derive/tests/expand/enum/unit/: const_generic.expanded.rs  const_generic.rs  simple.expanded.rs  simple.rs
narrow-derive/tests/expand/enum/unnamed/: generic.expanded.rs  generic.rs  simple.expanded.rs  simple.rs  where_clause.expanded.rs  where_clause.rs
narrow-derive/tests/expand/struct/named/: generic.expanded.rs  generic.rs  generic_option.expanded.rs  generic_option.rs  simple.expanded.rs  simple.rs
narrow-derive/tests/expand/struct/unit/: const_generic.expanded.rs  const_generic.rs  const_generic_default.expanded.rs  const_generic_default.rs  self.expanded.rs  self.rs  simple.expanded.rs  simple.rs  where_clause.expanded.rs  where_clause.rs
narrow-derive/tests/expand/struct/unnamed/: generic.expanded.rs  generic.rs  lifetime.expanded.rs  lifetime.rs  multiple.expanded.rs  multiple.rs  nested.expanded.rs  nested.rs  nested_generic.expanded.rs  nested_generic.rs  simple.expanded.rs  simple.rs
narrow-ffi/: Cargo.toml  build.rs
narrow-ffi/src/: export.rs  lib.rs
narrow-ffi/src/export/: boolean.rs  fixed_size_list.rs  fixed_size_primitive.rs  mod.rs  variable_size_list.rs
narrow-ffi/src/import/: boolean.rs  fixed_size_list.rs  fixed_size_primitive.rs  mod.rs  variable_size_list.rs
narrow/bitmap/: index.html  sidebar-items.js  struct.Bitmap.html
narrow/bitmap/fmt/: index.html
narrow/bitmap/iter/: index.html  sidebar-items.js  struct.BitPacked.html  struct.BitUnpacked.html  trait.BitPackedExt.html  trait.BitUnpackedExt.html  type.BitmapIntoIter.html  type.BitmapIter.html
narrow/buffer/: index.html  sidebar-items.js  trait.Buffer.html  trait.BufferAlloc.html  trait.BufferExtend.html  trait.BufferMut.html  trait.BufferTake.html
narrow/buffers/: trait.DataBuffer.html  trait.DataBufferMut.html  trait.OffsetBuffer.html  trait.ValidityBitmap.html
narrow/length/: trait.Length.html
narrow/null/: trait.Null.html
narrow/nullable/: index.html  sidebar-items.js  struct.Nullable.html
narrow/offset/: index.html  sidebar-items.js  trait.OffsetValue.html
narrow/validity/: index.html  sidebar-items.js  struct.Validity.html
src/: array.rs  bitmap.rs  buffer.rs  buffers.rs  collection.rs  fixed_size.rs  fmt.rs  index.rs  iter.rs  length.rs  lib.rs  null.rs  nullability.rs  nullable.rs  offset.rs  primitive.rs  validity.rs
src/array/: boolean.rs  dictionary.rs  fixed_size_binary.rs  fixed_size_list.rs  fixed_size_primitive.rs  mod.rs  null.rs  run_end_encoded.rs  string.rs  struct.rs  union.rs  variable_size_binary.rs  variable_size_list.rs
src/array/logical/: duration.rs  mod.rs  uuid.rs
src/array2/: fixed_size_primitive.rs  mod.rs  null.rs  variable_size_binary.rs
src/arrow/: bitmap.rs  buffer.rs  length.rs  mod.rs
src/arrow/array/: boolean.rs  fixed_size_binary.rs  fixed_size_list.rs  fixed_size_primitive.rs  logical.rs  mod.rs  null.rs  string.rs  struct.rs  union.rs  variable_size_binary.rs  variable_size_list.rs
src/arrow/buffer/: boolean_buffer.rs  buffer_builder.rs  mod.rs  null_buffer.rs  offset_buffer.rs  scalar_buffer.rs
src/bitmap/: fmt.rs  iter.rs  mod.rs  packed.rs  unpacked.rs  validity.rs
src/bitmap/iter/: bit_packed.rs  bit_unpacked.rs  mod.rs
src/collection/: arc.rs  array.rs  box.rs  flatten.rs  iterator.rs  map.rs  mod.rs  owned.rs  rc.rs  slice.rs  vec.rs  view.rs
src/collection/map/: mod.rs  string.rs
src/compute/: mod.rs  take.rs
src/io/: mod.rs
src/layout/: boolean.rs  fixed_size_list.rs  fixed_size_primitive.rs  mod.rs  variable_size_binary.rs  variable_size_list.rs
src/logical/: box.rs  chrono.rs  map.rs  mod.rs  uuid.rs
src/narrow/: buffer.rs.html  buffers.rs.html  length.rs.html  lib.rs.html  null.rs.html  nullable.rs.html  offset.rs  primitive.rs.html  validity.rs  validity.rs.html
src/narrow/array/: fixed_size_list.rs  null.rs  string.rs
src/narrow/arrow/: mod.rs
src/narrow/arrow/array/: mod.rs  (+6 more)
src/narrow/bitmap/: fmt.rs.html  iter.rs.html  mod.rs.html  validity.rs
src/narrow/logical/: map.rs  mod.rs  uuid.rs
src/narrow/nullable/: mod.rs.html
src/narrow/offset/: mod.rs.html
src/nullable/: mod.rs
src/offset/: buffer.rs  iter.rs  mod.rs
src/validity/: mod.rs
tests/: borrowed_memory.rs  collection_alloc_in.rs  derive.rs
(+13 files in other folders)
