[workspace.package]
version = "0.12.0"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2021"
rust-version = "1.79.0"
description = "An implementation of Apache Arrow"
readme = "README.md"
repository = "https://github.com/mbrobbel/narrow"
documentation = "http://docs.rs/narrow/"
license = "Apache-2.0 OR MIT"
keywords = ["Arrow"]
categories = ["data-structures"]

[workspace]
members = ["narrow-derive"]

[package]
name = "narrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
arrow-rs = [
    "dep:arrow-array",
    "dep:arrow-buffer",
    "dep:arrow-schema",
    "narrow-derive?/arrow-rs",
]
chrono = ["dep:chrono"]
derive = ["dep:narrow-derive"]
map = ["derive"]
uuid = ["dep:uuid"]

[dependencies]
arrow-array = { git = "https://github.com/mbrobbel/arrow-rs.git", rev = "75f56a497df774c6c2f3bc2c1315d847c452e3dd", default-features = false, optional = true }
arrow-buffer = { git = "https://github.com/mbrobbel/arrow-rs.git", rev = "75f56a497df774c6c2f3bc2c1315d847c452e3dd", default-features = false, optional = true }
arrow-schema = { git = "https://github.com/mbrobbel/arrow-rs.git", rev = "75f56a497df774c6c2f3bc2c1315d847c452e3dd", default-features = false, features = [
    "canonical_extension_types",
], optional = true }
chrono = { version = "0.4.39", default-features = false, optional = true }
narrow-derive = { path = "narrow-derive", version = "0.12.0", optional = true }
uuid = { version = "1.12.1", default-features = false, optional = true }

[dev-dependencies]
arrow-cast = { git = "https://github.com/mbrobbel/arrow-rs.git", rev = "75f56a497df774c6c2f3bc2c1315d847c452e3dd", default-features = false, features = [
    "prettyprint",
] }
bytes = "1.9.0"
chrono = { version = "0.4.39", default-features = false, features = ["now"] }
criterion = { version = "0.5.1", default-features = false, features = [
    "html_reports",
] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rustversion = { version = "1.0.19", default-features = false }
parquet = { git = "https://github.com/mbrobbel/arrow-rs.git", rev = "75f56a497df774c6c2f3bc2c1315d847c452e3dd", default-features = false, features = [
    "arrow",
    "arrow_canonical_extension_types",
] }
uuid = { version = "1.12.1", default-features = false }
num-traits = { version = "0.2.19" }

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "narrow"
harness = false
required-features = ["arrow-rs"]

[[example]]
name = "basic"
required-features = ["derive"]

[[example]]
name = "parquet"
required-features = ["arrow-rs", "chrono", "derive", "map", "uuid"]

[[example]]
name = "tpch_lineitem"
required-features = ["arrow-rs", "chrono", "derive"]
