[workspace.package]
version = "0.14.1"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2024"
rust-version = "1.89"
description = "An implementation of Apache Arrow"
readme = "README.md"
repository = "https://github.com/mbrobbel/narrow"
documentation = "http://docs.rs/narrow/"
license = "Apache-2.0 OR MIT"
keywords = ["Arrow"]
categories = ["data-structures"]

[workspace]
members = ["narrow-derive"]

[package]
name = "narrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
derive = ["dep:narrow-derive"]

[dependencies]
narrow-derive = { path = "narrow-derive", version = "0.14.1", optional = true }

[dev-dependencies]

[profile.bench]
lto = true
codegen-units = 1
