[package]
name = "narrow-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
arrow-rs = []

[lib]
proc-macro = true

[dependencies]
once_cell = "1.21.3"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.109", features = ["visit-mut", "full"] }

[dev-dependencies]
macrotest = "1.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(narrow_macrotest)'] }
