[package]
name = "narrow-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[lib]
proc-macro = true

[dependencies]

[dev-dependencies]
